CI is green
Run 9 passed everything at once for the first time: both flavours build, every
unit test passes, all twelve screenshots are recorded at 1440 by 1920, and
lint passes with abortOnError left on.

PROGRESS.md records what was wrong on each of the nine runs, so the next
person does not have to rediscover any of it. A badge goes on the README.

The screenshots still have no baseline. CI records them and uploads them; it
does not compare them yet. Look at them, commit them, then turn comparison on.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SVttrWTb6GW9nPbtokb1n2